resource/beta/parser.output
State 90 conflicts: 5 shift/reduce
State 94 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 141 conflicts: 4 shift/reduce
State 142 conflicts: 4 shift/reduce
State 147 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM_KW IDENTIFIER tarifha

    2 tarifha: tarifha tarif
    3        | tarif

    4 tarif: tarifeSakhtar
    5      | tarifeMoteghayyer
    6      | tarifeTabe

    7 tarifeSakhtar: STRUCT_KW IDENTIFIER OPEN_CURLY_BRACES tarifhayeMahalli CLOSE_CURLY_BRACES

    8 tarifhayeMahalli: tarifhayeMahalli tarifeMoteghayyereMahdud
    9                 | LAMBDA

   10 tarifeMoteghayyereMahdud: jenseMahdud tarifhayeMotheghayyerha SEMICOLON

   11 jenseMahdud: CONST_KW jens
   12            | jens

   13 jens: INTEGER_KW
   14     | REAL_KW
   15     | BOOLEAN_KW
   16     | CHARACTER_KW

   17 tarifeMoteghayyer: jens tarifhayeMotheghayyerha SEMICOLON

   18 tarifhayeMotheghayyerha: tarifeMeghdareAvvalie
   19                        | tarifhayeMotheghayyerha COMMA tarifeMeghdareAvvalie

   20 tarifeMeghdareAvvalie: tarifeShenaseyeMoteghayyer
   21                      | tarifeShenaseyeMoteghayyer EQ_OP ebarateSade

   22 tarifeShenaseyeMoteghayyer: IDENTIFIER
   23                           | IDENTIFIER OPEN_BRACKET NUMBER CLOSE_BRACKET

   24 tarifeTabe: jens IDENTIFIER OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS jomle
   25           | IDENTIFIER OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS jomle

   26 vorudi: vorudiha
   27       | LAMBDA

   28 vorudiha: vorudiha SEMICOLON jensVorudiha
   29         | jensVorudiha

   30 jensVorudiha: jens shenaseyeVorudiha

   31 shenaseyeVorudiha: shenaseyeVorudiha COMMA shenaseyeVorudi
   32                  | shenaseyeVorudi

   33 shenaseyeVorudi: IDENTIFIER
   34                | IDENTIFIER OPEN_BRACKET CLOSE_BRACKET

   35 jomle: jomleyeMorakkab
   36      | jomleyeEbarat
   37      | jomleyeEntekhab
   38      | jomleyeTekrar
   39      | jomleyeBazgasht
   40      | jomleyeShekast

   41 jomleyeMorakkab: OPEN_CURLY_BRACES tarifhayeMahalli jomleha CLOSE_CURLY_BRACES

   42 jomleha: jomleha jomle
   43        | LAMBDA

   44 jomleyeEbarat: ebarat SEMICOLON
   45              | SEMICOLON

   46 jomleyeEntekhab: IF_KW ebarateSade THEN_KW jomle
   47                | IF_KW ebarateSade THEN_KW jomle ELSE_KW jomle
   48                | SWITCH_KW OPEN_PARENTHESIS ebarateSade CLOSE_PARENTHESIS onsoreHalat onsorePishfarz END_KW

   49 onsoreHalat: STATE_KW NUMBER COLON jomle SEMICOLON
   50            | onsoreHalat STATE_KW NUMBER COLON jomle SEMICOLON

   51 onsorePishfarz: DEFAULT_KW COLON jomle SEMICOLON
   52               | LAMBDA

   53 jomleyeTekrar: WHEN_KW OPEN_PARENTHESIS ebarateSade CLOSE_PARENTHESIS jomle

   54 jomleyeBazgasht: RETURN_KW SEMICOLON
   55                | RETURN_KW ebarat SEMICOLON

   56 jomleyeShekast: BREAK_KW SEMICOLON

   57 ebarat: taghirpazir EQ_OP ebarat
   58       | taghirpazir PLUS_OP EQ_OP ebarat
   59       | taghirpazir MINUS_OP EQ_OP ebarat
   60       | taghirpazir MULTIPLY_OP EQ_OP ebarat
   61       | taghirpazir DIVIDE_OP EQ_OP ebarat
   62       | taghirpazir PLUS_PLUS_OP
   63       | taghirpazir MINUS_MINUS_OP
   64       | ebarateSade

   65 ebarateSade: ebarateSade OR_KW ebarateSade
   66            | ebarateSade AND_KW ebarateSade
   67            | ebarateSade XOR_KW ebarateSade
   68            | ebarateSade ANDTHEN_KW ebarateSade
   69            | NOT_KW ebarateSade
   70            | ebarateRabetei

   71 ebarateRabetei: ebarateRiaziManteghi
   72               | ebarateRiaziManteghi amalgareRabetei ebarateRiaziManteghi

   73 amalgareRabetei: LT_OP
   74                | LT_OP EQ_OP
   75                | EQ_OP EQ_OP
   76                | GT_OP EQ_OP
   77                | GT_OP

   78 ebarateRiaziManteghi: ebarateYegani
   79                     | ebarateRiaziManteghi amalgareRiazi ebarateRiaziManteghi

   80 amalgareRiazi: PLUS_OP
   81              | MINUS_OP
   82              | MULTIPLY_OP
   83              | DIVIDE_OP
   84              | PERCENT_OP

   85 ebarateYegani: amalgareYegani ebarateYegani
   86              | amel

   87 amalgareYegani: MINUS_OP
   88               | MULTIPLY_OP
   89               | QUESTIONMARK_OP

   90 amel: taghirpazir
   91     | taghirNApazir

   92 taghirpazir: IDENTIFIER
   93            | taghirpazir OPEN_BRACKET ebarat CLOSE_BRACKET
   94            | taghirpazir DOT IDENTIFIER

   95 taghirNApazir: OPEN_PARENTHESIS ebarat CLOSE_PARENTHESIS
   96              | sedaZadan
   97              | meghdareSabet

   98 sedaZadan: IDENTIFIER OPEN_PARENTHESIS bordareVorudi CLOSE_PARENTHESIS

   99 bordareVorudi: bordareVorudiha
  100              | LAMBDA

  101 bordareVorudiha: bordareVorudiha COMMA ebarat
  102                | ebarat

  103 meghdareSabet: NUMBER
  104              | REAL_NUMBER
  105              | CONST_CHAR
  106              | BOOLEAN_TRUE
  107              | BOOLEAN_FALSE

  108 LAMBDA: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM_KW (258) 1
STRUCT_KW (259) 7
CONST_KW (260) 11
INTEGER_KW (261) 13
REAL_KW (262) 14
BOOLEAN_KW (263) 15
CHARACTER_KW (264) 16
IF_KW (265) 46 47
THEN_KW (266) 46 47
ELSE_KW (267) 47
SWITCH_KW (268) 48
END_KW (269) 48
STATE_KW (270) 49 50
DEFAULT_KW (271) 51
WHEN_KW (272) 53
RETURN_KW (273) 54 55
BREAK_KW (274) 56
OR_KW (275) 65
AND_KW (276) 66
NOT_KW (277) 69
XOR_KW (278) 67
ANDTHEN_KW (279) 68
SEMICOLON (280) 10 17 28 44 45 49 50 51 54 55 56
COLON (281) 49 50 51
COMMA (282) 19 31 101
OPEN_BRACKET (283) 23 34 93
CLOSE_BRACKET (284) 23 34 93
OPEN_CURLY_BRACES (285) 7 41
CLOSE_CURLY_BRACES (286) 7 41
OPEN_PARENTHESIS (287) 24 25 48 53 95 98
CLOSE_PARENTHESIS (288) 24 25 48 53 95 98
DOT (289) 94
LT_OP (290) 73 74
GT_OP (291) 76 77
EQ_OP (292) 21 57 58 59 60 61 74 75 76
PLUS_PLUS_OP (293) 62
MINUS_MINUS_OP (294) 63
PLUS_OP (295) 58 80
MINUS_OP (296) 59 81 87
MULTIPLY_OP (297) 60 82 88
DIVIDE_OP (298) 61 83
QUESTIONMARK_OP (299) 89
PERCENT_OP (300) 84
IDENTIFIER (301) 1 7 22 23 24 25 33 34 92 94 98
NUMBER (302) 23 49 50 103
CONST_CHAR (303) 105
REAL_NUMBER (304) 104
BOOLEAN_FALSE (305) 107
BOOLEAN_TRUE (306) 106


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
tarifha (54)
    on left: 2 3, on right: 1 2
tarif (55)
    on left: 4 5 6, on right: 2 3
tarifeSakhtar (56)
    on left: 7, on right: 4
tarifhayeMahalli (57)
    on left: 8 9, on right: 7 8 41
tarifeMoteghayyereMahdud (58)
    on left: 10, on right: 8
jenseMahdud (59)
    on left: 11 12, on right: 10
jens (60)
    on left: 13 14 15 16, on right: 11 12 17 24 30
tarifeMoteghayyer (61)
    on left: 17, on right: 5
tarifhayeMotheghayyerha (62)
    on left: 18 19, on right: 10 17 19
tarifeMeghdareAvvalie (63)
    on left: 20 21, on right: 18 19
tarifeShenaseyeMoteghayyer (64)
    on left: 22 23, on right: 20 21
tarifeTabe (65)
    on left: 24 25, on right: 6
vorudi (66)
    on left: 26 27, on right: 24 25
vorudiha (67)
    on left: 28 29, on right: 26 28
jensVorudiha (68)
    on left: 30, on right: 28 29
shenaseyeVorudiha (69)
    on left: 31 32, on right: 30 31
shenaseyeVorudi (70)
    on left: 33 34, on right: 31 32
jomle (71)
    on left: 35 36 37 38 39 40, on right: 24 25 42 46 47 49 50 51 53
jomleyeMorakkab (72)
    on left: 41, on right: 35
jomleha (73)
    on left: 42 43, on right: 41 42
jomleyeEbarat (74)
    on left: 44 45, on right: 36
jomleyeEntekhab (75)
    on left: 46 47 48, on right: 37
onsoreHalat (76)
    on left: 49 50, on right: 48 50
onsorePishfarz (77)
    on left: 51 52, on right: 48
jomleyeTekrar (78)
    on left: 53, on right: 38
jomleyeBazgasht (79)
    on left: 54 55, on right: 39
jomleyeShekast (80)
    on left: 56, on right: 40
ebarat (81)
    on left: 57 58 59 60 61 62 63 64, on right: 44 55 57 58 59 60 61
    93 95 101 102
ebarateSade (82)
    on left: 65 66 67 68 69 70, on right: 21 46 47 48 53 64 65 66 67
    68 69
ebarateRabetei (83)
    on left: 71 72, on right: 70
amalgareRabetei (84)
    on left: 73 74 75 76 77, on right: 72
ebarateRiaziManteghi (85)
    on left: 78 79, on right: 71 72 79
amalgareRiazi (86)
    on left: 80 81 82 83 84, on right: 79
ebarateYegani (87)
    on left: 85 86, on right: 78 85
amalgareYegani (88)
    on left: 87 88 89, on right: 85
amel (89)
    on left: 90 91, on right: 86
taghirpazir (90)
    on left: 92 93 94, on right: 57 58 59 60 61 62 63 90 93 94
taghirNApazir (91)
    on left: 95 96 97, on right: 91
sedaZadan (92)
    on left: 98, on right: 96
bordareVorudi (93)
    on left: 99 100, on right: 98
bordareVorudiha (94)
    on left: 101 102, on right: 99 101
meghdareSabet (95)
    on left: 103 104 105 106 107, on right: 97
LAMBDA (96)
    on left: 108, on right: 9 27 43 52 100


State 0

    0 $accept: . program $end

    PROGRAM_KW  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM_KW . IDENTIFIER tarifha

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM_KW IDENTIFIER . tarifha

    STRUCT_KW     shift, and go to state 5
    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9
    IDENTIFIER    shift, and go to state 10

    tarifha            go to state 11
    tarif              go to state 12
    tarifeSakhtar      go to state 13
    jens               go to state 14
    tarifeMoteghayyer  go to state 15
    tarifeTabe         go to state 16


State 4

    0 $accept: program $end .

    $default  accept


State 5

    7 tarifeSakhtar: STRUCT_KW . IDENTIFIER OPEN_CURLY_BRACES tarifhayeMahalli CLOSE_CURLY_BRACES

    IDENTIFIER  shift, and go to state 17


State 6

   13 jens: INTEGER_KW .

    $default  reduce using rule 13 (jens)


State 7

   14 jens: REAL_KW .

    $default  reduce using rule 14 (jens)


State 8

   15 jens: BOOLEAN_KW .

    $default  reduce using rule 15 (jens)


State 9

   16 jens: CHARACTER_KW .

    $default  reduce using rule 16 (jens)


State 10

   25 tarifeTabe: IDENTIFIER . OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS jomle

    OPEN_PARENTHESIS  shift, and go to state 18


State 11

    1 program: PROGRAM_KW IDENTIFIER tarifha .
    2 tarifha: tarifha . tarif

    STRUCT_KW     shift, and go to state 5
    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9
    IDENTIFIER    shift, and go to state 10

    $default  reduce using rule 1 (program)

    tarif              go to state 19
    tarifeSakhtar      go to state 13
    jens               go to state 14
    tarifeMoteghayyer  go to state 15
    tarifeTabe         go to state 16


State 12

    3 tarifha: tarif .

    $default  reduce using rule 3 (tarifha)


State 13

    4 tarif: tarifeSakhtar .

    $default  reduce using rule 4 (tarif)


State 14

   17 tarifeMoteghayyer: jens . tarifhayeMotheghayyerha SEMICOLON
   24 tarifeTabe: jens . IDENTIFIER OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS jomle

    IDENTIFIER  shift, and go to state 20

    tarifhayeMotheghayyerha     go to state 21
    tarifeMeghdareAvvalie       go to state 22
    tarifeShenaseyeMoteghayyer  go to state 23


State 15

    5 tarif: tarifeMoteghayyer .

    $default  reduce using rule 5 (tarif)


State 16

    6 tarif: tarifeTabe .

    $default  reduce using rule 6 (tarif)


State 17

    7 tarifeSakhtar: STRUCT_KW IDENTIFIER . OPEN_CURLY_BRACES tarifhayeMahalli CLOSE_CURLY_BRACES

    OPEN_CURLY_BRACES  shift, and go to state 24


State 18

   25 tarifeTabe: IDENTIFIER OPEN_PARENTHESIS . vorudi CLOSE_PARENTHESIS jomle

    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9

    $default  reduce using rule 108 (LAMBDA)

    jens          go to state 25
    vorudi        go to state 26
    vorudiha      go to state 27
    jensVorudiha  go to state 28
    LAMBDA        go to state 29


State 19

    2 tarifha: tarifha tarif .

    $default  reduce using rule 2 (tarifha)


State 20

   22 tarifeShenaseyeMoteghayyer: IDENTIFIER .
   23                           | IDENTIFIER . OPEN_BRACKET NUMBER CLOSE_BRACKET
   24 tarifeTabe: jens IDENTIFIER . OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS jomle

    OPEN_BRACKET      shift, and go to state 30
    OPEN_PARENTHESIS  shift, and go to state 31

    $default  reduce using rule 22 (tarifeShenaseyeMoteghayyer)


State 21

   17 tarifeMoteghayyer: jens tarifhayeMotheghayyerha . SEMICOLON
   19 tarifhayeMotheghayyerha: tarifhayeMotheghayyerha . COMMA tarifeMeghdareAvvalie

    SEMICOLON  shift, and go to state 32
    COMMA      shift, and go to state 33


State 22

   18 tarifhayeMotheghayyerha: tarifeMeghdareAvvalie .

    $default  reduce using rule 18 (tarifhayeMotheghayyerha)


State 23

   20 tarifeMeghdareAvvalie: tarifeShenaseyeMoteghayyer .
   21                      | tarifeShenaseyeMoteghayyer . EQ_OP ebarateSade

    EQ_OP  shift, and go to state 34

    $default  reduce using rule 20 (tarifeMeghdareAvvalie)


State 24

    7 tarifeSakhtar: STRUCT_KW IDENTIFIER OPEN_CURLY_BRACES . tarifhayeMahalli CLOSE_CURLY_BRACES

    $default  reduce using rule 108 (LAMBDA)

    tarifhayeMahalli  go to state 35
    LAMBDA            go to state 36


State 25

   30 jensVorudiha: jens . shenaseyeVorudiha

    IDENTIFIER  shift, and go to state 37

    shenaseyeVorudiha  go to state 38
    shenaseyeVorudi    go to state 39


State 26

   25 tarifeTabe: IDENTIFIER OPEN_PARENTHESIS vorudi . CLOSE_PARENTHESIS jomle

    CLOSE_PARENTHESIS  shift, and go to state 40


State 27

   26 vorudi: vorudiha .
   28 vorudiha: vorudiha . SEMICOLON jensVorudiha

    SEMICOLON  shift, and go to state 41

    $default  reduce using rule 26 (vorudi)


State 28

   29 vorudiha: jensVorudiha .

    $default  reduce using rule 29 (vorudiha)


State 29

   27 vorudi: LAMBDA .

    $default  reduce using rule 27 (vorudi)


State 30

   23 tarifeShenaseyeMoteghayyer: IDENTIFIER OPEN_BRACKET . NUMBER CLOSE_BRACKET

    NUMBER  shift, and go to state 42


State 31

   24 tarifeTabe: jens IDENTIFIER OPEN_PARENTHESIS . vorudi CLOSE_PARENTHESIS jomle

    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9

    $default  reduce using rule 108 (LAMBDA)

    jens          go to state 25
    vorudi        go to state 43
    vorudiha      go to state 27
    jensVorudiha  go to state 28
    LAMBDA        go to state 29


State 32

   17 tarifeMoteghayyer: jens tarifhayeMotheghayyerha SEMICOLON .

    $default  reduce using rule 17 (tarifeMoteghayyer)


State 33

   19 tarifhayeMotheghayyerha: tarifhayeMotheghayyerha COMMA . tarifeMeghdareAvvalie

    IDENTIFIER  shift, and go to state 44

    tarifeMeghdareAvvalie       go to state 45
    tarifeShenaseyeMoteghayyer  go to state 23


State 34

   21 tarifeMeghdareAvvalie: tarifeShenaseyeMoteghayyer EQ_OP . ebarateSade

    NOT_KW            shift, and go to state 46
    OPEN_PARENTHESIS  shift, and go to state 47
    MINUS_OP          shift, and go to state 48
    MULTIPLY_OP       shift, and go to state 49
    QUESTIONMARK_OP   shift, and go to state 50
    IDENTIFIER        shift, and go to state 51
    NUMBER            shift, and go to state 52
    CONST_CHAR        shift, and go to state 53
    REAL_NUMBER       shift, and go to state 54
    BOOLEAN_FALSE     shift, and go to state 55
    BOOLEAN_TRUE      shift, and go to state 56

    ebarateSade           go to state 57
    ebarateRabetei        go to state 58
    ebarateRiaziManteghi  go to state 59
    ebarateYegani         go to state 60
    amalgareYegani        go to state 61
    amel                  go to state 62
    taghirpazir           go to state 63
    taghirNApazir         go to state 64
    sedaZadan             go to state 65
    meghdareSabet         go to state 66


State 35

    7 tarifeSakhtar: STRUCT_KW IDENTIFIER OPEN_CURLY_BRACES tarifhayeMahalli . CLOSE_CURLY_BRACES
    8 tarifhayeMahalli: tarifhayeMahalli . tarifeMoteghayyereMahdud

    CONST_KW            shift, and go to state 67
    INTEGER_KW          shift, and go to state 6
    REAL_KW             shift, and go to state 7
    BOOLEAN_KW          shift, and go to state 8
    CHARACTER_KW        shift, and go to state 9
    CLOSE_CURLY_BRACES  shift, and go to state 68

    tarifeMoteghayyereMahdud  go to state 69
    jenseMahdud               go to state 70
    jens                      go to state 71


State 36

    9 tarifhayeMahalli: LAMBDA .

    $default  reduce using rule 9 (tarifhayeMahalli)


State 37

   33 shenaseyeVorudi: IDENTIFIER .
   34                | IDENTIFIER . OPEN_BRACKET CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 72

    $default  reduce using rule 33 (shenaseyeVorudi)


State 38

   30 jensVorudiha: jens shenaseyeVorudiha .
   31 shenaseyeVorudiha: shenaseyeVorudiha . COMMA shenaseyeVorudi

    COMMA  shift, and go to state 73

    $default  reduce using rule 30 (jensVorudiha)


State 39

   32 shenaseyeVorudiha: shenaseyeVorudi .

    $default  reduce using rule 32 (shenaseyeVorudiha)


State 40

   25 tarifeTabe: IDENTIFIER OPEN_PARENTHESIS vorudi CLOSE_PARENTHESIS . jomle

    IF_KW              shift, and go to state 74
    SWITCH_KW          shift, and go to state 75
    WHEN_KW            shift, and go to state 76
    RETURN_KW          shift, and go to state 77
    BREAK_KW           shift, and go to state 78
    NOT_KW             shift, and go to state 46
    SEMICOLON          shift, and go to state 79
    OPEN_CURLY_BRACES  shift, and go to state 80
    OPEN_PARENTHESIS   shift, and go to state 47
    MINUS_OP           shift, and go to state 48
    MULTIPLY_OP        shift, and go to state 49
    QUESTIONMARK_OP    shift, and go to state 50
    IDENTIFIER         shift, and go to state 51
    NUMBER             shift, and go to state 52
    CONST_CHAR         shift, and go to state 53
    REAL_NUMBER        shift, and go to state 54
    BOOLEAN_FALSE      shift, and go to state 55
    BOOLEAN_TRUE       shift, and go to state 56

    jomle                 go to state 81
    jomleyeMorakkab       go to state 82
    jomleyeEbarat         go to state 83
    jomleyeEntekhab       go to state 84
    jomleyeTekrar         go to state 85
    jomleyeBazgasht       go to state 86
    jomleyeShekast        go to state 87
    ebarat                go to state 88
    ebarateSade           go to state 89
    ebarateRabetei        go to state 58
    ebarateRiaziManteghi  go to state 59
    ebarateYegani         go to state 60
    amalgareYegani        go to state 61
    amel                  go to state 62
    taghirpazir           go to state 90
    taghirNApazir         go to state 64
    sedaZadan             go to state 65
    meghdareSabet         go to state 66


State 41

   28 vorudiha: vorudiha SEMICOLON . jensVorudiha

    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9

    jens          go to state 25
    jensVorudiha  go to state 91


State 42

   23 tarifeShenaseyeMoteghayyer: IDENTIFIER OPEN_BRACKET NUMBER . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 92


State 43

   24 tarifeTabe: jens IDENTIFIER OPEN_PARENTHESIS vorudi . CLOSE_PARENTHESIS jomle

    CLOSE_PARENTHESIS  shift, and go to state 93


State 44

   22 tarifeShenaseyeMoteghayyer: IDENTIFIER .
   23                           | IDENTIFIER . OPEN_BRACKET NUMBER CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 30

    $default  reduce using rule 22 (tarifeShenaseyeMoteghayyer)


State 45

   19 tarifhayeMotheghayyerha: tarifhayeMotheghayyerha COMMA tarifeMeghdareAvvalie .

    $default  reduce using rule 19 (tarifhayeMotheghayyerha)


State 46

   69 ebarateSade: NOT_KW . ebarateSade

    NOT_KW            shift, and go to state 46
    OPEN_PARENTHESIS  shift, and go to state 47
    MINUS_OP          shift, and go to state 48
    MULTIPLY_OP       shift, and go to state 49
    QUESTIONMARK_OP   shift, and go to state 50
    IDENTIFIER        shift, and go to state 51
    NUMBER            shift, and go to state 52
    CONST_CHAR        shift, and go to state 53
    REAL_NUMBER       shift, and go to state 54
    BOOLEAN_FALSE     shift, and go to state 55
    BOOLEAN_TRUE      shift, and go to state 56

    ebarateSade           go to state 94
    ebarateRabetei        go to state 58
    ebarateRiaziManteghi  go to state 59
    ebarateYegani         go to state 60
    amalgareYegani        go to state 61
    amel                  go to state 62
    taghirpazir           go to state 63
    taghirNApazir         go to state 64
    sedaZadan             go to state 65
    meghdareSabet         go to state 66


State 47

   95 taghirNApazir: OPEN_PARENTHESIS . ebarat CLOSE_PARENTHESIS

    NOT_KW            shift, and go to state 46
    OPEN_PARENTHESIS  shift, and go to state 47
    MINUS_OP          shift, and go to state 48
    MULTIPLY_OP       shift, and go to state 49
    QUESTIONMARK_OP   shift, and go to state 50
    IDENTIFIER        shift, and go to state 51
    NUMBER            shift, and go to state 52
    CONST_CHAR        shift, and go to state 53
    REAL_NUMBER       shift, and go to state 54
    BOOLEAN_FALSE     shift, and go to state 55
    BOOLEAN_TRUE      shift, and go to state 56

    ebarat                go to state 95
    ebarateSade           go to state 89
    ebarateRabetei        go to state 58
    ebarateRiaziManteghi  go to state 59
    ebarateYegani         go to state 60
    amalgareYegani        go to state 61
    amel                  go to state 62
    taghirpazir           go to state 90
    taghirNApazir         go to state 64
    sedaZadan             go to state 65
    meghdareSabet         go to state 66


State 48

   87 amalgareYegani: MINUS_OP .

    $default  reduce using rule 87 (amalgareYegani)


State 49

   88 amalgareYegani: MULTIPLY_OP .

    $default  reduce using rule 88 (amalgareYegani)


State 50

   89 amalgareYegani: QUESTIONMARK_OP .

    $default  reduce using rule 89 (amalgareYegani)


State 51

   92 taghirpazir: IDENTIFIER .
   98 sedaZadan: IDENTIFIER . OPEN_PARENTHESIS bordareVorudi CLOSE_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 96

    $default  reduce using rule 92 (taghirpazir)


State 52

  103 meghdareSabet: NUMBER .

    $default  reduce using rule 103 (meghdareSabet)


State 53

  105 meghdareSabet: CONST_CHAR .

    $default  reduce using rule 105 (meghdareSabet)


State 54

  104 meghdareSabet: REAL_NUMBER .

    $default  reduce using rule 104 (meghdareSabet)


State 55

  107 meghdareSabet: BOOLEAN_FALSE .

    $default  reduce using rule 107 (meghdareSabet)


State 56

  106 meghdareSabet: BOOLEAN_TRUE .

    $default  reduce using rule 106 (meghdareSabet)


State 57

   21 tarifeMeghdareAvvalie: tarifeShenaseyeMoteghayyer EQ_OP ebarateSade .
   65 ebarateSade: ebarateSade . OR_KW ebarateSade
   66            | ebarateSade . AND_KW ebarateSade
   67            | ebarateSade . XOR_KW ebarateSade
   68            | ebarateSade . ANDTHEN_KW ebarateSade

    OR_KW       shift, and go to state 97
    AND_KW      shift, and go to state 98
    XOR_KW      shift, and go to state 99
    ANDTHEN_KW  shift, and go to state 100

    $default  reduce using rule 21 (tarifeMeghdareAvvalie)


State 58

   70 ebarateSade: ebarateRabetei .

    $default  reduce using rule 70 (ebarateSade)


State 59

   71 ebarateRabetei: ebarateRiaziManteghi .
   72               | ebarateRiaziManteghi . amalgareRabetei ebarateRiaziManteghi
   79 ebarateRiaziManteghi: ebarateRiaziManteghi . amalgareRiazi ebarateRiaziManteghi

    LT_OP        shift, and go to state 101
    GT_OP        shift, and go to state 102
    EQ_OP        shift, and go to state 103
    PLUS_OP      shift, and go to state 104
    MINUS_OP     shift, and go to state 105
    MULTIPLY_OP  shift, and go to state 106
    DIVIDE_OP    shift, and go to state 107
    PERCENT_OP   shift, and go to state 108

    $default  reduce using rule 71 (ebarateRabetei)

    amalgareRabetei  go to state 109
    amalgareRiazi    go to state 110


State 60

   78 ebarateRiaziManteghi: ebarateYegani .

    $default  reduce using rule 78 (ebarateRiaziManteghi)


State 61

   85 ebarateYegani: amalgareYegani . ebarateYegani

    OPEN_PARENTHESIS  shift, and go to state 47
    MINUS_OP          shift, and go to state 48
    MULTIPLY_OP       shift, and go to state 49
    QUESTIONMARK_OP   shift, and go to state 50
    IDENTIFIER        shift, and go to state 51
    NUMBER            shift, and go to state 52
    CONST_CHAR        shift, and go to state 53
    REAL_NUMBER       shift, and go to state 54
    BOOLEAN_FALSE     shift, and go to state 55
    BOOLEAN_TRUE      shift, and go to state 56

    ebarateYegani   go to state 111
    amalgareYegani  go to state 61
    amel            go to state 62
    taghirpazir     go to state 63
    taghirNApazir   go to state 64
    sedaZadan       go to state 65
    meghdareSabet   go to state 66


State 62

   86 ebarateYegani: amel .

    $default  reduce using rule 86 (ebarateYegani)


State 63

   90 amel: taghirpazir .
   93 taghirpazir: taghirpazir . OPEN_BRACKET ebarat CLOSE_BRACKET
   94            | taghirpazir . DOT IDENTIFIER

    OPEN_BRACKET  shift, and go to state 112
    DOT           shift, and go to state 113

    $default  reduce using rule 90 (amel)


State 64

   91 amel: taghirNApazir .

    $default  reduce using rule 91 (amel)


State 65

   96 taghirNApazir: sedaZadan .

    $default  reduce using rule 96 (taghirNApazir)


State 66

   97 taghirNApazir: meghdareSabet .

    $default  reduce using rule 97 (taghirNApazir)


State 67

   11 jenseMahdud: CONST_KW . jens

    INTEGER_KW    shift, and go to state 6
    REAL_KW       shift, and go to state 7
    BOOLEAN_KW    shift, and go to state 8
    CHARACTER_KW  shift, and go to state 9

    jens  go to state 114


State 68

    7 tarifeSakhtar: STRUCT_KW IDENTIFIER OPEN_CURLY_BRACES tarifhayeMahalli CLOSE_CURLY_BRACES .

    $default  reduce using rule 7 (tarifeSakhtar)


State 69

    8 tarifhayeMahalli: tarifhayeMahalli tarifeMoteghayyereMahdud .

    $default  reduce using rule 8 (tarifhayeMahalli)


State 70

   10 tarifeMoteghayyereMahdud: jenseMahdud . tarifhayeMotheghayyerha SEMICOLON

    IDENTIFIER  shift, and go to state 44

    tarifhayeMotheghayyerha     go to state 115
    tarifeMeghdareAvvalie       go to state 22
    tarifeShenaseyeMoteghayyer  go to state 23


State 71

   12 jenseMahdud: jens .

    $default  reduce using rule 12 (jenseMahdud)


State 72

   34 shenaseyeVorudi: IDENTIFIER OPEN_BRACKET . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 116


State 73

   31 shenaseyeVorudiha: shenaseyeVorudiha COMMA . shenaseyeVorudi

    IDENTIFIER  shift, and go to state 37

    shenaseyeVorudi  go to state 117


State 74

   46 jomleyeEntekhab: IF_KW . ebarateSade THEN_KW jomle
   47                | IF_KW . ebarateSade THEN_KW jomle ELSE_KW jomle

    NOT_KW            shift, and go to state 46
    OPEN_PARENTHESIS  shift, and go to state 47
    MINUS_OP          shift, and go to state 48
    MULTIPLY_OP       shift, and go to state 49
    QUESTIONMARK_OP   shift, and go to state 50
    IDENTIFIER        shift, and go to state 51
    NUMBER            shift, and go to state 52
    CONST_CHAR        shift, and go to state 53
    REAL_NUMBER       shift, and go to state 54
    BOOLEAN_FALSE     shift, and go to state 55
    BOOLEAN_TRUE      shift, and go to state 56

    ebarateSade           go to state 118
    ebarateRabetei        go to state 58
    ebarateRiaziManteghi  go to state 59
    ebarateYegani         go to state 60
    amalgareYegani        go to state 61
    amel                  go to state 62
    taghirpazir           go to state 63
    taghirNApazir         go to state 64
    sedaZadan             go to state 65
    meghdareSabet         go to state 66


State 75

   48 jomleyeEntekhab: SWITCH_KW . OPEN_PARENTHESIS ebarateSade CLOSE_PARENTHESIS onsoreHalat onsorePishfarz END_KW

    OPEN_PARENTHESIS  shift, and go to state 119


State 76

   53 jomleyeTekrar: WHEN_KW . OPEN_PARENTHESIS ebarateSade CLOSE_PARENTHESIS jomle

    OPEN_PARENTHESIS  shift, and go to state 120


State 77

   54 jomleyeBazgasht: RETURN_KW . SEMICOLON
   55                | RETURN_KW . ebarat SEMICOLON
